# frontend-libvisual-plug-in

./: AUTHORS.md  CMakeLists.txt  README.md
.github/workflows/: linux.yml
src/: actor_projectM.cpp
